Bug 450507 - QtQuick-using apps crash frequently in KDeclarative::KDeclarative::~KDeclarative()
Summary: QtQuick-using apps crash frequently in KDeclarative::KDeclarative::~KDeclarat...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kdeclarative
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: drkonqi
: 450495 450505 450549 450555 450559 450561 450569 450576 450596 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-18 08:29 UTC by Fushan Wen
Modified: 2022-04-04 19:56 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.92
Sentry Crash Report:


Attachments
plasma desktop crash (8.62 KB, text/vnd.kde.kcrash-report)
2022-02-19 15:42 UTC, Valter Mura
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-02-18 08:29:29 UTC
Application: systemsettings (5.24.1)

Qt Version: 5.15.2
Frameworks Version: 5.92.0
Operating System: Linux 5.16.8-1-default x86_64
Windowing System: Wayland
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.24.80 [KCrashBackend]

-- Information about the crash:
- What I was doing when the application crashed:
1. Open systemsettings in Icon View mode
2. Open Display settings
3. Close the window

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  0x00007fa6157145d8 in KDeclarative::KDeclarative::~KDeclarative (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kdeclarative-5.91.0git.20220217T184710~0943bbf-ku.1.1.x86_64/src/kdeclarative/kdeclarative.cpp:37
#7  0x00007fa61571753e in KDeclarative::QmlObjectPrivate::~QmlObjectPrivate (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kdeclarative-5.91.0git.20220217T184710~0943bbf-ku.1.1.x86_64/src/kdeclarative/qmlobject.cpp:61
#8  KDeclarative::QmlObject::~QmlObject (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kdeclarative-5.91.0git.20220217T184710~0943bbf-ku.1.1.x86_64/src/kdeclarative/qmlobject.cpp:190
#9  0x00007fa6157177e9 in KDeclarative::QmlObjectSharedEngine::~QmlObjectSharedEngine (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kdeclarative-5.91.0git.20220217T184710~0943bbf-ku.1.1.x86_64/src/kdeclarative/qmlobjectsharedengine.cpp:63
#10 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a17c4d20) at kernel/qobject.cpp:2104
#11 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a1794e20, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#12 0x00007fa615df4349 in KCModuleQml::~KCModuleQml (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kcmutils-5.91.0git.20220216T194409~6469b26-ku.1.1.x86_64/src/kcmoduleqml.cpp:227
#13 0x00007fa615df9324 in KCModuleProxy::deleteClient (this=this@entry=0x5653a1af8cd0) at /usr/src/debug/kcmutils-5.91.0git.20220216T194409~6469b26-ku.1.1.x86_64/src/kcmoduleproxy.cpp:203
#14 0x00007fa615df9c4f in KCModuleProxy::~KCModuleProxy (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kcmutils-5.91.0git.20220216T194409~6469b26-ku.1.1.x86_64/src/kcmoduleproxy.cpp:185
#15 0x00007fa615df9e29 in KCModuleProxy::~KCModuleProxy (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kcmutils-5.91.0git.20220216T194409~6469b26-ku.1.1.x86_64/src/kcmoduleproxy.cpp:198
#16 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a3301890) at kernel/qobject.cpp:2104
#17 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a2932940, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#18 0x00007fa617242379 in QWidget::~QWidget (this=0x5653a2932940, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1546
#19 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a187c8f0) at kernel/qobject.cpp:2104
#20 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a1918460, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#21 0x00007fa6173a4059 in QScrollArea::~QScrollArea (this=0x5653a1918460, __in_chrg=<optimized out>) at widgets/qscrollarea.cpp:173
#22 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a1a57cb0) at kernel/qobject.cpp:2104
#23 0x00007fa617242026 in QWidget::~QWidget (this=this@entry=0x5653a190b520, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#24 0x00007fa6172f2bbd in QFrame::~QFrame (this=this@entry=0x5653a190b520, __in_chrg=<optimized out>) at widgets/qframe.cpp:264
#25 0x00007fa6173bb15d in QStackedWidget::~QStackedWidget (this=this@entry=0x5653a190b520, __in_chrg=<optimized out>) at widgets/qstackedwidget.cpp:147
#26 0x00007fa617915e3d in KPageStackedWidget::~KPageStackedWidget (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kwidgetsaddons-5.91.0git.20220216T195241~1542b70f-ku.1.1.x86_64/build/src/KF5WidgetsAddons_autogen/EWIEGA46WW/../../../../src/kpageview_p.h:23
#27 KPageStackedWidget::~KPageStackedWidget (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kwidgetsaddons-5.91.0git.20220216T195241~1542b70f-ku.1.1.x86_64/build/src/KF5WidgetsAddons_autogen/EWIEGA46WW/../../../../src/kpageview_p.h:23
#28 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a1dd3f50) at kernel/qobject.cpp:2104
#29 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a1917ae0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#30 0x00007fa61796fe29 in KPageWidget::~KPageWidget (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kwidgetsaddons-5.91.0git.20220216T195241~1542b70f-ku.1.1.x86_64/src/kpagewidget.cpp:58
#31 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a1e70ee0) at kernel/qobject.cpp:2104
#32 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a1900620, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#33 0x00007fa617bd7919 in ModuleView::~ModuleView() () from /lib64/libsystemsettingsview.so.3
#34 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a1977970) at kernel/qobject.cpp:2104
#35 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a1a45a90, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#36 0x00007fa6173bb169 in QStackedWidget::~QStackedWidget (this=0x5653a1a45a90, __in_chrg=<optimized out>) at widgets/qstackedwidget.cpp:147
#37 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x5653a1774d40) at kernel/qobject.cpp:2104
#38 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a1506eb0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#39 0x00007fa6173bb169 in QStackedWidget::~QStackedWidget (this=0x5653a1506eb0, __in_chrg=<optimized out>) at widgets/qstackedwidget.cpp:147
#40 0x00007fa61657ab9e in QObjectPrivate::deleteChildren (this=this@entry=0x7fa5e0063990) at kernel/qobject.cpp:2104
#41 0x00007fa617242026 in QWidget::~QWidget (this=0x5653a177cfa0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1522
#42 0x00005653a10ce3d0 in ?? ()
#43 0x00005653a10ce4e9 in ?? ()
#44 0x00007fa61657d22f in QObject::event (this=0x5653a177cfa0, e=0x5653a37b6b30) at kernel/qobject.cpp:1301
#45 0x00007fa617b894d9 in KXmlGuiWindow::event (this=0x5653a177cfa0, ev=0x5653a37b6b30) at /usr/src/debug/kxmlgui-5.91.0git.20220216T195300~c188a2f1-ku.1.1.x86_64/src/kxmlguiwindow.cpp:220
#46 0x00007fa617204a7f in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5653a177cfa0, e=0x5653a37b6b30) at kernel/qapplication.cpp:3632
#47 0x00007fa616550e1a in QCoreApplication::notifyInternal2 (receiver=0x5653a177cfa0, event=0x5653a37b6b30) at kernel/qcoreapplication.cpp:1064
#48 0x00007fa616553e57 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5653a146f480) at kernel/qcoreapplication.cpp:1821
#49 0x00007fa6165a8cd3 in postEventSourceDispatch (s=s@entry=0x5653a1506920) at kernel/qeventdispatcher_glib.cpp:277
#50 0x00007fa61406cd5f in g_main_dispatch (context=0x7fa60c005000) at ../glib/gmain.c:3381
#51 g_main_context_dispatch (context=0x7fa60c005000) at ../glib/gmain.c:4099
#52 0x00007fa61406d0e8 in g_main_context_iterate (context=context@entry=0x7fa60c005000, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4175
#53 0x00007fa61406d19f in g_main_context_iteration (context=0x7fa60c005000, may_block=1) at ../glib/gmain.c:4240
#54 0x00007fa6165a8354 in QEventDispatcherGlib::processEvents (this=0x5653a14fa4e0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#55 0x00007fa61654f81b in QEventLoop::exec (this=this@entry=0x7ffc9fd99ed0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#56 0x00007fa616557af0 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#57 0x00005653a10c6e97 in ?? ()
#58 0x00007fa615e6e5c0 in __libc_start_call_main (main=main@entry=0x5653a10c63b0, argc=argc@entry=2, argv=argv@entry=0x7ffc9fd9a198) at ../sysdeps/nptl/libc_start_call_main.h:58
#59 0x00007fa615e6e67c in __libc_start_main_impl (main=0x5653a10c63b0, argc=2, argv=0x7ffc9fd9a198, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffc9fd9a188) at ../csu/libc-start.c:409
#60 0x00005653a10c77d5 in ?? ()
[Inferior 1 (process 19316) detached]

Possible duplicates by query: bug 449589, bug 442689, bug 435962, bug 430496, bug 429267.

Reported using DrKonqi
Comment 1 Bug Janitor Service 2022-02-18 09:00:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kdeclarative/-/merge_requests/114
Comment 2 Luca Beltrame 2022-02-18 21:55:00 UTC
systemsettings is not the only affected application. In my setup, plasmashell crashes at startup with a similar backtrace. 

Reverting 0943bbf5 in kdeclarative fixes the crash.
Comment 3 Fushan Wen 2022-02-19 01:38:59 UTC
*** Bug 450505 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-02-19 07:05:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kdeclarative/-/merge_requests/116
Comment 5 Alexander Lohnau 2022-02-19 07:33:28 UTC
Git commit 05f147aa3d09fbb789184e8a5948c49d196105e1 by Alexander Lohnau.
Committed on 19/02/2022 at 07:04.
Pushed by lbeltrame into branch 'master'.

Fix double deleting of NetworkAccessManagerFactory

M  +1    -0    src/kdeclarative/kdeclarative.cpp

https://invent.kde.org/frameworks/kdeclarative/commit/05f147aa3d09fbb789184e8a5948c49d196105e1
Comment 6 Fushan Wen 2022-02-19 09:51:07 UTC
*** Bug 450555 has been marked as a duplicate of this bug. ***
Comment 7 Fushan Wen 2022-02-19 11:49:56 UTC
*** Bug 450559 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2022-02-19 14:30:01 UTC
*** Bug 450495 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2022-02-19 14:30:26 UTC
*** Bug 450549 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2022-02-19 14:30:37 UTC
*** Bug 450561 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2022-02-19 14:30:59 UTC
*** Bug 450569 has been marked as a duplicate of this bug. ***
Comment 12 Valter Mura 2022-02-19 15:42:20 UTC
Created attachment 146937 [details]
plasma desktop crash

Hi, I'm still experimenting the crash... plasmashell crash report attached.
Comment 13 Fushan Wen 2022-02-19 15:47:06 UTC
(In reply to Valter Mura from comment #12)
> Created attachment 146937 [details]
> plasma desktop crash
> 
> Hi, I'm still experimenting the crash... plasmashell crash report attached.

Did you update kdeclarative?
Comment 14 Fushan Wen 2022-02-19 15:58:38 UTC
*** Bug 450576 has been marked as a duplicate of this bug. ***
Comment 15 Valter Mura 2022-02-19 16:22:22 UTC
(In reply to Fushan Wen from comment #13)
> (In reply to Valter Mura from comment #12)
> > Created attachment 146937 [details]
> > plasma desktop crash
> > 
> > Hi, I'm still experimenting the crash... plasmashell crash report attached.
> 
> Did you update kdeclarative?

Sorry, in which way?
Comment 16 Fushan Wen 2022-02-19 16:30:27 UTC
(In reply to Valter Mura from comment #15)
> (In reply to Fushan Wen from comment #13)
> > (In reply to Valter Mura from comment #12)
> > > Created attachment 146937 [details]
> > > plasma desktop crash
> > > 
> > > Hi, I'm still experimenting the crash... plasmashell crash report attached.
> > 
> > Did you update kdeclarative?
> 
> Sorry, in which way?

There was a fix in the latest version. If you are using git version of frameworks, you need to update and recompile it.
Comment 17 Valter Mura 2022-02-19 16:49:29 UTC
(In reply to Fushan Wen from comment #16)
> (In reply to Valter Mura from comment #15)
> > (In reply to Fushan Wen from comment #13)
> > > (In reply to Valter Mura from comment #12)
> > > > Created attachment 146937 [details]
> > > > plasma desktop crash
> > > > 
> > > > Hi, I'm still experimenting the crash... plasmashell crash report attached.
> > > 
> > > Did you update kdeclarative?
> > 
> > Sorry, in which way?
> 
> There was a fix in the latest version. If you are using git version of
> frameworks, you need to update and recompile it.

I did not compile anything. I'm using the Neon Packages.
Comment 18 Fushan Wen 2022-02-20 03:07:38 UTC
*** Bug 450596 has been marked as a duplicate of this bug. ***