Delete networkAccessManagerFactory when we delete the private class of the engine

This fixes the crash on exit.

BUG: 450507