src/kdeclarative/kdeclarative.cpp
@@ -26,6 +26,13 @@ KDeclarativePrivate::KDeclarativePrivate()
 {
 }
 
+KDeclarativePrivate::~KDeclarativePrivate()
+{
+    if (declarativeEngine) {
+        delete declarativeEngine->networkAccessManagerFactory();
+    }
+}
+
 KDeclarative::KDeclarative()
     : d(new KDeclarativePrivate)
 {
@@ -33,9 +40,6 @@ KDeclarative::KDeclarative()
 
 KDeclarative::~KDeclarative()
 {
-    if (d->declarativeEngine) {
-        delete d->declarativeEngine->networkAccessManagerFactory();
-    }
     delete d;
 }
 
